# land-price-estimator

./: .gitignore  README.md  pyproject.toml  try_landnet.ipynb
dataset_preparation/: CHIKA.ipynb  README.md
landprice_estimation/: README.md  generate_segmap_with_segformer.ipynb  train-landprice-estimator.ipynb
segmentation/: README.md
segmentation/SegFormer/: train-segformer.ipynb
segmentation/SegFormer/segformer-finetuned-with-LoveDA/: config.json
segmentation/Unet/: UNet.ipynb
