[tool.poetry]
name = "land-price-estimator"
version = "0.1.0"
description = "A project to develop a model that predicts land price from a satellite image."
authors = ["Group04"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
torchgeo = "^0.4.1"
tensorboard = "^2.13.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
