[tool.poetry]
name = "land-price-estimator"
version = "0.1.0"
description = "A project to develop a model that predicts land price from a satellite image."
authors = ["Group04"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.30.2"
datasets = "^2.13.1"
evaluate = "^0.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.277"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
